--- a/apache-log4cxx/projects/log4cxx.vcxproj
+++ b/apache-log4cxx/projects/log4cxx.vcxproj
@@ -917,6 +917,17 @@
     <ClInclude Include="..\src\main\include\log4cxx\net\xmlsocketappender.h" />
     <ClInclude Include="..\src\main\include\log4cxx\rolling\zipcompressaction.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\apr-util\aprutil.vcxproj">
+      <Project>{33a0559e-e80c-36b9-e61d-48576a440a42}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\apr-util\xml\expat\lib\xml.vcxproj">
+      <Project>{2f4a1ad8-b475-4644-099d-b12884ca8132}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\apr\apr.vcxproj">
+      <Project>{c084cf3a-0bc3-b8fb-1792-5488aca5e1d2}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
